<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"

    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <ImageView
            android:id="@+id/image_of_movie_in_list"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/movie_rate_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movie_poster" />


        <ImageView
            android:id="@+id/movie_rate_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_rate_stare"
            android:contentDescription="@string/movie_rate" />


        <ImageView
            android:id="@+id/movie_rate_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/movie_rate_1"
            app:layout_constraintTop_toTopOf="@+id/movie_rate_1"
            app:srcCompat="@drawable/ic_rate_stare"
            android:contentDescription="@string/movie_rate"/>

        <ImageView
            android:id="@+id/movie_rate_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/movie_rate_2"
            app:layout_constraintTop_toTopOf="@+id/movie_rate_2"
            app:srcCompat="@drawable/ic_rate_stare"
            android:contentDescription="@string/movie_rate"/>

        <ImageView
            android:id="@+id/movie_rate_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/movie_rate_3"
            app:layout_constraintTop_toTopOf="@+id/movie_rate_3"
            app:srcCompat="@drawable/ic_rate_stare"
            android:contentDescription="@string/movie_rate"/>

        <ImageView
            android:id="@+id/movie_rate_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_rate_4"
            app:layout_constraintTop_toTopOf="@+id/movie_rate_4"
            app:srcCompat="@drawable/ic_rate_stare"
            android:contentDescription="@string/movie_rate"/>

        <TextView
            android:id="@+id/vote_average"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_rate_5"
            app:layout_constraintTop_toTopOf="@+id/movie_rate_5"
            tools:text="7.5" />

        <ImageView
            android:id="@+id/favorite_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/image_of_movie_in_list"
            app:layout_constraintTop_toTopOf="@+id/image_of_movie_in_list"
            app:srcCompat="@drawable/ic_yellow_rate_stare"
            android:contentDescription="@string/favorite_movie" />

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>
