<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:id="@+id/detail_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F1F1F2"
        android:orientation="vertical"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#bcbabe">

                    <ImageView
                        android:id="@+id/movie_trailer"
                        android:layout_width="350dp"
                        android:layout_height="200dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/movie_poster" />

                    <TextView
                        android:id="@+id/name_of_selected_movie"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movie_trailer"
                        tools:text="VENOM" />

                    <TextView
                        android:id="@+id/release_date_of_selected_movie"
                        style="@style/Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name_of_selected_movie"
                        app:layout_constraintVertical_bias="1.0"
                        tools:layout_conversion_absoluteHeight="21dp"
                        tools:layout_conversion_absoluteWidth="36dp"
                        tools:text="2108" />

                    <TextView
                        android:id="@+id/classification_of_selected_movie"
                        style="@style/Subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/release_date_of_selected_movie"
                        app:layout_constraintStart_toEndOf="@+id/release_date_of_selected_movie"
                        tools:layout_conversion_absoluteHeight="21dp"
                        tools:layout_conversion_absoluteWidth="43dp"
                        tools:text="PG-13" />

                    <TextView
                        android:id="@+id/genres_of_selected_movie"
                        style="@style/Subtitle"
                        android:layout_width="0dp"
                        android:layout_height="0dp"

                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/classification_of_selected_movie"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/classification_of_selected_movie"
                        app:layout_constraintTop_toTopOf="@+id/classification_of_selected_movie"
                        tools:layout_conversion_absoluteHeight="21dp"
                        tools:layout_conversion_absoluteWidth="101dp"
                        tools:text="action , drama, adventere" />

                    <ImageView
                        android:id="@+id/play_button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/movie_trailer"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/movie_trailer"
                        app:layout_constraintVertical_bias="0.604"
                        app:srcCompat="@drawable/ic_play" />

                    <TextView
                        android:id="@+id/trailer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        app:fontFamily="@font/roboto"
                        app:layout_constraintBottom_toBottomOf="@+id/movie_trailer"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0" />

                    <ImageView
                        android:id="@+id/sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:visibility="invisible"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_yellow_rate_stare" />

                    <ImageView
                        android:id="@+id/share_trailer_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/release_date_of_selected_movie"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/name_of_selected_movie"
                        app:srcCompat="@drawable/ic_baseline_share_24px" />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <ImageView
                android:id="@+id/image_of_selected_movie"
                android:layout_width="120dp"
                android:layout_height="170dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/overview"
                style="@style/body"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/image_of_selected_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_of_selected_movie"
                app:layout_constraintTop_toTopOf="@+id/image_of_selected_movie"
                tools:text="The day a hit and run driver took the life of her little boy, Marilyn (Wendy Raquel Robinson) died inside. Not even the passing of time, the love of a good man or a job as choir director at her church could bring her peace. But a chance encounter with a mysterious homeless man, who calls himself Mozart (Gary Dourdan), will change Marilyn's world and let her see that there are no accidents, and true healing starts with forgiveness." />

            <ImageView
                android:id="@+id/current_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/image_of_selected_movie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_of_selected_movie"
                app:srcCompat="@drawable/ic_yellow_rate_stare" />

            <TextView
                android:id="@+id/vote_count"
                style="@style/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintEnd_toEndOf="@+id/vote_average"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="@+id/current_rate"
                app:layout_constraintTop_toBottomOf="@+id/current_rate"
                tools:text=" (1024) vote" />

            <TextView
                android:id="@+id/vote_average"
                style="@style/Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/current_rate"
                app:layout_constraintStart_toEndOf="@+id/current_rate"
                app:layout_constraintTop_toTopOf="@+id/current_rate"
                tools:text="6.7" />

            <TextView
                android:id="@+id/watch_later"
                style="@style/ButtonTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/add_to_favorite_list"
                app:layout_constraintBottom_toBottomOf="@+id/vote_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_of_selected_movie"
                tools:text="add to favorite list" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vote_count" />

            <TextView
                android:id="@+id/similar_movie"
                style="@style/HeadLineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/similar_movie_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/more_like_movie_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/similar_movie" />

            <TextView
                android:id="@+id/reviews_text"
                style="@style/HeadLineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/reviews_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/more_like_movie_list" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews_text" />

            <ImageView
                android:id="@+id/check_sign"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/watch_later"
                app:layout_constraintEnd_toStartOf="@+id/watch_later"
                app:layout_constraintTop_toTopOf="@+id/watch_later"
                app:layout_constraintVertical_bias="0.42000002"
                app:srcCompat="@drawable/ic_check" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeHolder0"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeHolder1"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeHolder2"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeHolder3"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeHolder4"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeHolder5"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeHolder6"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeHolder7"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeHolder8"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeHolder9"
                android:visibility="gone"/>
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>